k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-app-svc
spec:
  type: ClusterIP
  selector:
    app: custom-app
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
