k8s/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: custom-app-vs
spec:
  hosts:
    - "*"
  gateways:
    - custom-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: custom-app-svc.default.svc.cluster.local
            port:
              number: 80

    - match:
        - uri:
            exact: /status
      route:
        - destination:
            host: custom-app-svc.default.svc.cluster.local
            port:
              number: 80

    - match:
        - uri:
            exact: /log
          method:
            exact: POST
      fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 2s
      timeout: 1s
      retries:
        attempts: 2
        perTryTimeout: 0.5s
      route:
        - destination:
            host: custom-app-svc.default.svc.cluster.local
            port:
              number: 80

    - match:
        - uri:
            exact: /logs
      route:
        - destination:
            host: custom-app-svc.default.svc.cluster.local
            port:
              number: 80

    - match:
        - uri:
            prefix: /
      directResponse:
        status: 404
        body:
          string: "Not Found"
